Address PMD finding; Migrate joiner API usage